# rule

./: rule.cabal  shell.nix
src/: Rule.hs
src/Rule/: Core.hs  Do.hs  Env.hs  HList.hs  Rule.hs  Test.hs
src/Rule/Env/: Do.hs  Syntax.hs
src/Rule/Rule/: Syntax.hs
